--- a/index.html
+++ b/index.html
@@ -7,17 +7,82 @@
     <link rel="stylesheet" href="resume.css">
   </head>
   <body>
-    <!--兩欄測試-->
-    <div class="container">
-      <div class="row">
-        <div class="three columns">
-          three columns
-        </div>
-        <div class="nine columns">
-         nine columns
-       </div>
-     </div>
-   </div>
+  <header>
 
+  </header>
+  <div align="center">
+    <img id="avatar" src="1.jpg" width="150px" alt="avatar" />
+  </div>
+  <div id="about" class="container">
+    <div class="row">
+      <div class="offset-by-two eight columns">
+        <h1>I'm Omo.</h1>
+        <p>
+           1111111111111111111111
+        </p>
+        <p>
+           22222222222222222222
+        </p>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <div id="exp" class="container">
+    <!--row1-->
+    <div class="row">
+      <div class="four columns">
+        <img class="fix-width" src="1.jpg" alt="image" />
+        <h3>my experience</h3>
+        <p>
+          1111111111111
+        </p>
+      </div>
+
+      <div class="four columns">
+        <img class="fix-width" src="1.jpg" alt="image" />
+        <h3>my experience</h3>
+        <p>
+          1111111111111
+        </p>
+      </div>
+
+      <div class="four columns">
+        <img class="fix-width" src="1.jpg" alt="image" />
+        <h3>my experience</h3>
+        <p>
+          1111111111111
+        </p>
+      </div>
+    </div>
+<!--row2-->
+<div class="row">
+  <div class="four columns">
+    <img class="fix-width" src="1.jpg" alt="image" />
+    <h3>my experience</h3>
+    <p>
+      1111111111111
+    </p>
+  </div>
+
+  <div class="four columns">
+    <img class="fix-width" src="1.jpg" alt="image" />
+    <h3>my experience</h3>
+    <p>
+      1111111111111
+    </p>
+  </div>
+
+  <div class="four columns">
+    <img class="fix-width" src="1.jpg" alt="image" />
+    <h3>my experience</h3>
+    <p>
+      1111111111111
+    </p>
+  </div>
+
+</div>
+
+
+  </div>
   </body>
 </html>
